// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > should render correctly with default props 1`] = `
"<fieldset class="group">
  <legend class="title"></legend>
  <div class="content"></div>
</fieldset>"
`;

exports[`RadioGroup > should render with title slot when provided 1`] = `
"<fieldset class="group">
  <legend class="title">
    <div class="custom-title">Custom Title</div>
  </legend>
  <div class="content"></div>
</fieldset>"
`;

exports[`RadioGroup > should render with title when provided 1`] = `
"<fieldset class="group">
  <legend class="title">Test Title</legend>
  <div class="content"></div>
</fieldset>"
`;
